--- a/Gestion Medica-SmarthClinic/aPresentationLayer/aPresentationLayer.csproj
+++ b/Gestion Medica-SmarthClinic/aPresentationLayer/aPresentationLayer.csproj
@@ -48,6 +48,7 @@
     <Reference Include="DevExpress.XtraNavBar.v11.1, Version=11.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -144,6 +145,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BussinesLogicLayer\BussinesLogicLayer.csproj">
+      <Project>{7FE7EC09-500E-4D89-8FCB-E438AB28B45C}</Project>
+      <Name>BussinesLogicLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntidadesLayer\EntidadesLayer.csproj">
+      <Project>{7BC33D24-2CB8-446C-81CD-D2C6EC66F205}</Project>
+      <Name>EntidadesLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
