--- a/Gestion Medica-SmarthClinic/aPresentationLayer/app.config
+++ b/Gestion Medica-SmarthClinic/aPresentationLayer/app.config
@@ -14,7 +14,7 @@
 		 connectionString="Data Source=OSPLAPTOP\OSPSQLSERVER;Initial Catalog=SmartHearthCareDb;Integrated Security=True"
 		 providerName="System.Data.SqlClient" />
 		<add name="aPresentationLayer.Properties.Settings.SmartHealthCareConnectionString"
-		 connectionString="Data Source=OSPLAPTOP\OSPSQLSERVER;Initial Catalog=SmartHealthCare;Integrated Security=True"
+		 connectionString="Data Source=(local);Initial Catalog=SmartHearthCareDb;Integrated Security=True"
 		 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<startup>
